Create registration route, form, and Jinja template, create class method for user registration, create congrats page

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
 
     <nav class="navbar navbar-light bg-primary justify-content-between ">
         <div class="container">
-          <a href="/" class="navbar-brand text-light">Stupid Twitter</a>
+          <a href="/" class="navbar-brand text-light">Feedback App</a>
           <ul class="nav navbar-nav flex-row float-right">
             {% if session['user_id'] %}
             <li class="nav-item">
