--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
         <div class="container">
           <a href="/" class="navbar-brand text-light">Feedback App</a>
           <ul class="nav navbar-nav flex-row float-right">
-            {% if session['user_id'] %}
+            {% if session['username'] %}
             <li class="nav-item">
               <a class="nav-link pr-3 text-light" href="/logout">Logout</a>
             </li>
@@ -30,10 +30,10 @@
       </nav>
     
       <div class="container" style="margin-top: 2em">
-        {% with msgs = get_flashed_messages(with_categories=true) %}
+        {% with msgs = get_flashed_messages() %}
         {% if msgs %}
-        {% for category, msg in msgs %}
-        <div class="alert bg-{{category}}">{{ msg }}</div>
+        {% for msg in msgs %}
+        <div class="badge bg-success">{{ msg }}</div>
         {% endfor %}
         {% endif %}
         {% endwith %}
