--- a/templates/user_detail.html
+++ b/templates/user_detail.html
@@ -15,13 +15,24 @@
 <div class="container">
 <h2>Feedback</h2>
 
+
 {% for comment in feedback %}
-<p>
-    {{comment.title}}
-    {{comment.content}}
-</p>
+{% if session['username'] == comment.user.username %}
+<div class="card">
+    <div class="card-body">
+     <h5 class="card-title text-info"><b>{{comment.title}}</b></h5>
+     <p class="card-text">{{comment.content}}</p>
+     <a href="/feedback/{{comment.id}}/update" class="btn btn-warning btn-sm">Edit</a>
+     <form action="/feedback/{{comment.id}}/delete" method="post">
+     <button class="btn btn-danger btn-sm">Delete Post</button>
+    </form>
+    </div> 
+</div> 
+{% endif %}  
 {% endfor %}
 
+
 <a href="/users/{{user.username}}/feedback/add" class="btn btn-info btn-sm">Add Feedback</a>
+
 </div>
 {% endblock %}
